fix: ajustando flex wrap na seção myProhects e aboutMe

--- a/src/components/sections/myProjects/index.css
+++ b/src/components/sections/myProjects/index.css
@@ -13,6 +13,7 @@
 .projects_grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(300px, 1fr));
+  flex-wrap: wrap;
   gap: 24px;
 }
 
@@ -128,4 +129,18 @@
   transform: translateY(-2px);
   background-color: gainsboro;
   box-shadow: 0px 4px 6px #333;
+}
+
+/* BOTÃO DESABILITADO */
+.load_more_button:disabled,
+.collapse_projects_button:disabled {
+  cursor: not-allowed;
+  transform: none;
+}
+
+/* BOTÃO DESABILITADO COM HOVER */
+.load_more_button:disabled:hover, .collapse_projects_button:disabled:hover {
+  transform: none;
+  box-shadow: 0px 2px 6px gray;
+  background-color: #fff;
 }
